www/menu_bar.css
.menu_bar {
  width: 100%;
  height: 50 px;
  z-index: 100;
}
.menu_bar * {
    z-index: inherit;
}
.menu_bar ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
  overflow: hidden;
  background-color: #000000;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
}
.menu_bar ul li a{
  background-color: #000000;
  color: white; /* Black text color */
  padding: 12px; /* Add some padding */
  text-decoration: none; /* Remove underline from links */
  float: right;
  font-size: 20px;
}
ul li.home_button a{
  float: left !important;
}
.menu_bar ul li a:hover {
  color: #bfbfbf;
}
.menu_bar .current {
  color: #bfbfbf !important;
}

